--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -8,7 +8,7 @@
 
 	Username:-<input type="text" name="uname"/></br>
 	Password:-<input type="password" name="pwd"/></br>
-	<a href="homepage.html"><button>Login</button></a>
+	<a href="homepage.html"><button>Loginn</button></a>
 
 </body>
 </html>
